# PROYETO_FINAL

./: README.md
HealthTracker/: CMakeLists.txt  CMakeLists.txt.user.ff6c001  Doxyfile.in  README.md
HealthTracker/include/: CSVExporter.h  DatabaseManager.h  HealthAnalyzer.h  HealthRecord.h  User.h  adddialog.h  mainwindow.h
HealthTracker/src/: CSVExporter.cpp  DatabaseManager.cpp  HealthAnalyzer.cpp  HealthRecord.cpp  User.cpp  mainwindow.cpp
HealthTracker/ui/: mainwindow.ui
